<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/searchResults"
        android:name="io.github.anvell.stackoverview.view.SearchResultsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SearchResultsFragment"
        tools:listitem="@layout/fragment_searchresults_item" />
</layout>